Hide internals of some groupped workflows (#38604)
When the whole workflow can be skipped and it's one of the workflows
than nothing depends on, we can skip the whole workflow rather than
individual jobs - then the workflow will not be shown as unfolded
with all the jobs skipped but as a single skipped workflow.

This is what we do for Additional CI image tests and Finalize tests
& special tests.

(cherry picked from commit 3f4872beea156a60e7318b806c36be53a05207a9)

--- a/.github/workflows/additional-ci-image-checks.yml
+++ b/.github/workflows/additional-ci-image-checks.yml
@@ -112,7 +112,7 @@ jobs:
       use-uv: "true"
       include-success-outputs: ${{ inputs.include-success-outputs }}
       docker-cache: ${{ inputs.docker-cache }}
-    if: inputs.canary-run == 'true' && inputs.branch == 'main'
+    if: inputs.branch == 'main'
 
   # Check that after earlier cache push, breeze command will build quickly
   check-that-image-builds-quickly:
@@ -127,7 +127,7 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       GITHUB_USERNAME: ${{ github.actor }}
       VERBOSE: "true"
-    if: inputs.canary-run == 'true' && inputs.branch == 'main'
+    if: inputs.branch == 'main'
     steps:
       - name: "Cleanup repo"
         shell: bash
@@ -168,4 +168,3 @@ jobs:
       use-uv: "true"
       upgrade-to-newer-dependencies: ${{ inputs.upgrade-to-newer-dependencies }}
       docker-cache: ${{ inputs.docker-cache }}
-    if: inputs.canary-run == 'true'
