--- a/airflow/providers/elasticsearch/provider.yaml
+++ b/airflow/providers/elasticsearch/provider.yaml
@@ -169,10 +169,10 @@ config:
         description: |
           A string representing the full path to the Python callable path which accept TI object and
           return comma separated list of index patterns. This will takes precedence over index_patterns.
-        version_added: 2.9.0
+        version_added: 5.4.0
         type: string
-        example: "module.callable"
-        default: ""
+        example: module.callable
+        default: ~
   elasticsearch_configs:
     description: ~
     options:
