Change capture warnings output format to the JSON
Make it also work in xdist worker and exchange data with controller
Provide simple script for summarize warnings with simple report

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -486,6 +486,7 @@ addopts = [
 norecursedirs = [
     ".eggs",
     "airflow",
+    "tests/_internals",
     "tests/dags_with_system_exit",
     "tests/test_utils",
     "tests/dags_corrupted",
