Activate RUF015 that checks for unnecessary iterable allocation for first element

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -293,6 +293,7 @@ extend-select = [
     "B028", # No explicit stacklevel keyword argument found
     "TRY002", # Prohibit use of `raise Exception`, use specific exceptions instead.
     "RUF006", # Checks for asyncio dangling task
+    "RUF015", # Checks for unnecessary iterable allocation for first element
 ]
 ignore = [
     "D203",
