--- a/pyproject.toml
+++ b/pyproject.toml
@@ -289,6 +289,7 @@ extend-select = [
     "B004", # Checks for use of hasattr(x, "__call__") and replaces it with callable(x)
     "B006", # Checks for uses of mutable objects as function argument defaults.
     "B019", # Use of functools.lru_cache or functools.cache on methods can lead to memory leaks
+    "RUF006", # Checks for asyncio dangling task
 ]
 ignore = [
     "D203",
