--- a/airflow/providers/hashicorp/provider.yaml
+++ b/airflow/providers/hashicorp/provider.yaml
@@ -55,7 +55,6 @@ versions:
 dependencies:
   - apache-airflow>=2.6.0
   - hvac>=1.1.0
-  - apache-airflow-providers-amazon>=8.0.0
 
 integrations:
   - integration-name: Hashicorp Vault
@@ -74,3 +73,9 @@ connection-types:
 
 secrets-backends:
   - airflow.providers.hashicorp.secrets.vault.VaultBackend
+
+additional-extras:
+  - name: boto3
+    dependencies:
+      # Require for AWS assume role authentication
+      - boto3>=1.33.0
