--- a/airflow/providers/amazon/provider.yaml
+++ b/airflow/providers/amazon/provider.yaml
@@ -236,6 +236,10 @@ integrations:
     external-doc-url: https://aws.amazon.com/kinesis/data-firehose/
     logo: /integration-logos/aws/Amazon-Kinesis-Data-Firehose_light-bg@4x.png
     tags: [aws]
+  - integration-name: Amazon OpenSearch Serverless
+    external-doc-url: https://aws.amazon.com/opensearch-service/
+    logo: /integration-logos/aws/Amazon-OpenSearch_light-bg@4x.png
+    tags: [aws]
   - integration-name: Amazon RDS
     external-doc-url: https://aws.amazon.com/rds/
     logo: /integration-logos/aws/Amazon-RDS_light-bg@4x.png
@@ -597,6 +601,9 @@ hooks:
   - integration-name: Amazon CloudWatch Logs
     python-modules:
       - airflow.providers.amazon.aws.hooks.logs
+  - integration-name: Amazon OpenSearch Serverless
+    python-modules:
+      - airflow.providers.amazon.aws.hooks.opensearch_serverless
   - integration-name: Amazon RDS
     python-modules:
       - airflow.providers.amazon.aws.hooks.rds
