--- a/airflow/providers/apache/iceberg/provider.yaml
+++ b/airflow/providers/apache/iceberg/provider.yaml
@@ -16,23 +16,15 @@
 # under the License.
 
 ---
-package-name: apache-airflow-providers-tabular
-name: Tabular
+package-name: apache-airflow-providers-apache-iceberg
+name: Iceberg
 description: |
-    `Tabular <https://tabular.io/>`__
+    `Iceberg <https://iceberg.apache.org/>`__
 
 state: ready
-source-date-epoch: 1714477660
+source-date-epoch: 1705912293
 # note that those versions are maintained by release manager - do not update them manually
 versions:
-  - 1.5.0
-  - 1.4.1
-  - 1.4.0
-  - 1.3.0
-  - 1.2.1
-  - 1.2.0
-  - 1.1.0
-  - 1.0.1
   - 1.0.0
 
 dependencies:
@@ -48,10 +40,10 @@ integrations:
     tags: [software]
 
 hooks:
-  - integration-name: Tabular
+  - integration-name: Iceberg
     python-modules:
-      - airflow.providers.tabular.hooks.tabular
+      - airflow.providers.apache.iceberg.hooks.iceberg
 
 connection-types:
-  - hook-class-name: airflow.providers.tabular.hooks.tabular.TabularHook
-    connection-type: tabular
+  - hook-class-name: airflow.providers.apache.iceberg.hooks.iceberg.IcebergHook
+    connection-type: iceberg
