Fix default value

--- a/airflow/providers/elasticsearch/provider.yaml
+++ b/airflow/providers/elasticsearch/provider.yaml
@@ -172,7 +172,7 @@ config:
         version_added: 5.4.0
         type: string
         example: module.callable
-        default: ~
+        default: ""
   elasticsearch_configs:
     description: ~
     options:
