--- a/airflow/config_templates/config.yml
+++ b/airflow/config_templates/config.yml
@@ -500,6 +500,13 @@ core:
       type: integer
       example: ~
       default: "4096"
+    disalble_scan_stale_dags:
+      description: |
+        Stale dags are deleted by default, [core] disalble_scan_stale_dags is True if you want to keep them.
+      version_added: 2.9.0
+      type: boolean
+      example: ~
+      default: "False"
 database:
   description: ~
   options:
