--- a/airflow/config_templates/config.yml
+++ b/airflow/config_templates/config.yml
@@ -500,13 +500,13 @@ core:
       type: integer
       example: ~
       default: "4096"
-    disable_scanning_stale_dags:
+    enable_scanning_stale_dags:
       description: |
-        Stale dags are deleted by default, [core] disable_scanning_stale_dags is True if you want to keep them.
+        Stale dags are deleted by default, [core] enable_scanning_stale_dags is False if you want to keep them.
       version_added: 2.10.0
       type: boolean
       example: ~
-      default: "False"
+      default: "True"
 database:
   description: ~
   options:
