--- a/airflow/config_templates/unit_tests.cfg
+++ b/airflow/config_templates/unit_tests.cfg
@@ -59,8 +59,8 @@ unit_test_mode = True
 killed_task_cleanup_time = 5
 # We only allow our own classes to be deserialized in tests
 allowed_deserialization_classes = airflow.* tests.*
-# expired dags are deleted by default, you can put true in this variable if you want to keep them.
-disable_scanning_stale_dags = False
+# expired dags are deleted by default, you can put False in this variable if you want to keep them.
+enable_scanning_stale_dags = True
 
 [database]
 
