--- a/airflow/providers/teradata/provider.yaml
+++ b/airflow/providers/teradata/provider.yaml
@@ -56,6 +56,14 @@ transfers:
     target-integration-name: Teradata
     python-module: airflow.providers.teradata.transfers.teradata_to_teradata
     how-to-guide: /docs/apache-airflow-providers-teradata/operators/teradata_to_teradata.rst
+  - source-integration-name: Azure Blob Storage
+    target-integration-name: Teradata
+    python-module: airflow.providers.teradata.transfers.azure_blob_to_teradata
+    how-to-guide: /docs/apache-airflow-providers-teradata/operators/azure_blob_to_teradata.rst
+  - source-integration-name: Amazon S3
+    target-integration-name: Teradata
+    python-module: airflow.providers.teradata.transfers.s3_to_teradata
+    how-to-guide: /docs/apache-airflow-providers-teradata/operators/s3_to_teradata.rst
 
 connection-types:
   - hook-class-name: airflow.providers.teradata.hooks.teradata.TeradataHook
