--- a/airflow/www/package.json
+++ b/airflow/www/package.json
@@ -51,6 +51,7 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^13.0.0",
     "@types/color": "^3.0.3",
+    "@types/json-to-pretty-yaml": "^1.2.1",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@types/react-syntax-highlighter": "^15.5.6",
@@ -126,6 +127,7 @@
     "framer-motion": "^6.0.0",
     "jquery": ">=3.5.0",
     "jshint": "^2.13.4",
+    "json-to-pretty-yaml": "^1.2.2",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.43",
     "react": "^18.0.0",
