--- a/airflow/providers/fab/provider.yaml
+++ b/airflow/providers/fab/provider.yaml
@@ -50,7 +50,7 @@ dependencies:
   - flask-appbuilder==4.4.1
   - flask-login>=0.6.2
   - google-re2>=1.0
-  - jmsepath
+  - jmespath
 
 config:
   fab:
