Add `jmespath` as an explicit dependency (#39350)
The helm chart tests, AWS provider, and FAB provider all use `jmespath`
directly, but we were only installing it as a dependency of a dependency
(botocore is the most likely commonly used dep that requires it). Instead,
since we use it ourselves, set it as a dep.

--- a/airflow/providers/amazon/provider.yaml
+++ b/airflow/providers/amazon/provider.yaml
@@ -103,6 +103,7 @@ dependencies:
   # We should investigate if we can upgrade to a newer version of lxml and xmlsec
   # Tracked in https://github.com/apache/airflow/issues/39103
   - xmlsec<1.3.14
+  - jmespath
 
 additional-extras:
   - name: pandas
