--- a/airflow/config_templates/config.yml
+++ b/airflow/config_templates/config.yml
@@ -2596,11 +2596,13 @@ scarf_analytics:
     Airflow integrates `Scarf <https://about.scarf.sh/>`__ to collect basic telemetry data during operation.
     This data assists Airflow maintainers in better understanding how Airflow is used.
     Insights gained from this telemetry are critical for prioritizing patches, minor releases, and
-    security fixes. Additionally, this information supports key decisions related to the development Roadmap.
+    security fixes. Additionally, this information supports key decisions related to the development roadmap.
+    Check the FAQ doc for more information on what data is collected.
 
-    Users can easily opt out of analytics in various ways documented
-    `here <https://docs.scarf.sh/gateway/#do-not-track>`__ and by setting the ``enabled`` option
-    to ``False``. Airflow also respects ``SCARF_ANALYTICS=false`` environment variable.
+    Deployments can opt-out of analytics by setting the ``enabled`` option
+    to ``False``, or the ``SCARF_ANALYTICS=false`` environment variable.
+    Individual users can easily opt-out of analytics in various ways documented in the
+    `Scarf Do Not Track docs <https://docs.scarf.sh/gateway/#do-not-track>`__.
 
   options:
     enabled:
@@ -2610,3 +2612,4 @@ scarf_analytics:
       type: boolean
       example: ~
       default: "True"
+      see_also: ":ref:`Airflow telemetry FAQ <airflow-telemetry-faq>`"
