--- a/airflow/config_templates/config.yml
+++ b/airflow/config_templates/config.yml
@@ -2591,7 +2591,7 @@ sensors:
       type: float
       example: ~
       default: "604800"
-scarf_analytics:
+telemetry_collection:
   description: |
     Airflow integrates `Scarf <https://about.scarf.sh/>`__ to collect basic telemetry data during operation.
     This data assists Airflow maintainers in better understanding how Airflow is used.
