--- a/airflow/providers/apache/iceberg/provider.yaml
+++ b/airflow/providers/apache/iceberg/provider.yaml
@@ -14,3 +14,36 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
+
+---
+package-name: apache-airflow-providers-apache-iceberg
+name: Iceberg
+description: |
+    `Iceberg <https://iceberg.apache.org/>`__
+
+state: ready
+source-date-epoch: 1705912293
+# note that those versions are maintained by release manager - do not update them manually
+versions:
+  - 1.0.0
+
+dependencies:
+  - apache-airflow>=2.7.0
+
+devel-dependencies:
+  - pyiceberg>=0.5.0
+
+integrations:
+  - integration-name: Iceberg
+    logo: /integration-logos/iceberg/iceberg.png
+    external-doc-url: https://iceberg.apache.org/
+    tags: [software]
+
+hooks:
+  - integration-name: Iceberg
+    python-modules:
+      - airflow.providers.apache.iceberg.hooks.iceberg
+
+connection-types:
+  - hook-class-name: airflow.providers.apache.iceberg.hooks.iceberg.IcebergHook
+    connection-type: iceberg
