Fix Apprise Mypy checks added in 1.8.0 (#39580)
(cherry picked from commit 79042cff416296c8bdbd64f2e0a5f4d46c93e882)

--- a/airflow/providers/apprise/provider.yaml
+++ b/airflow/providers/apprise/provider.yaml
@@ -43,7 +43,7 @@ integrations:
 
 dependencies:
   - apache-airflow>=2.6.0
-  - apprise
+  - apprise>=1.8.0
 
 hooks:
   - integration-name: Apprise
