--- a/chart/templates/workers/placeholder/placeholder-priorityclass.yaml
+++ b/chart/templates/workers/placeholder/placeholder-priorityclass.yaml
@@ -22,7 +22,7 @@
 ##########################################
 
 {{- if or (eq .Values.executor "KubernetesExecutor") (eq .Values.executor "CeleryKubernetesExecutor") }}
-{{- if .Values.workers.placeHolder.enabled -}}
+{{- if .Values.workers.placeHolder.enabled }}
 
 apiVersion: scheduling.k8s.io/v1
 kind: PriorityClass
