--- a/airflow/providers/databricks/provider.yaml
+++ b/airflow/providers/databricks/provider.yaml
@@ -65,7 +65,9 @@ versions:
 dependencies:
   - apache-airflow>=2.7.0
   - apache-airflow-providers-common-sql>=1.10.0
-  - requests>=2.27.0,<3
+  # requests 2.32.0 has an incompatibility with python lib docker
+  # https://github.com/psf/requests/issues/6707
+  - requests>=2.27.0,<2.32.0
   # The connector 2.9.0 released on Aug 10, 2023 has a bug that it does not properly declare urllib3 and
   # it needs to be excluded. See https://github.com/databricks/databricks-sql-python/issues/190
   # The 2.9.1 (to be released soon) already contains the fix
