Load Provider Plugins in Development, mark entry-points as dynamic

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ classifiers = [
     "Topic :: System :: Monitoring",
 ]
 
-dynamic = ["version", "optional-dependencies", "dependencies"]
+dynamic = ["version", "optional-dependencies", "dependencies", "entry-points"]
 
 # !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 # !!! YOU MIGHT BE SURPRISED NOT SEEING THE DEPENDENCIES AS `project.dependencies`     !!!!!!!!!
