added workflow_dispatch: for main branch workflows

--- a/.github/workflows/ci-teradata-main-documentation-unit-tests.yml
+++ b/.github/workflows/ci-teradata-main-documentation-unit-tests.yml
@@ -23,6 +23,7 @@
           - main
       schedule:
       - cron: "0 6 * * *"
+      workflow_dispatch: 
     permissions:
       contents: write
       pages: write
