--- a/.github/workflows/ci-teradata-main-documentation-unit-tests.yml
+++ b/.github/workflows/ci-teradata-main-documentation-unit-tests.yml
@@ -40,8 +40,8 @@
             with:
               ref: main
               persist-credentials: false
-          - name: "Display current branch"
-            run: echo "The current branch is ${{ github.ref }}" ${{github.event.ref}}
+          - name: "Github Event and Branch Details"
+            run: echo "The current checked out branch is main. Workflow trigged Event: ${{ github.event_name  }}. The fully qualified reference (ref) that triggered the workflow run: ${{ github.ref }}"
           - name: "Install Python"
             uses: actions/setup-python@v4
             with:
