--- a/.github/workflows/ci-teradata-main-documentation-unit-tests.yml
+++ b/.github/workflows/ci-teradata-main-documentation-unit-tests.yml
@@ -41,7 +41,7 @@
               ref: main
               persist-credentials: false
           - name: "Github Event and Branch Details"
-            run: echo "The current checked out branch is main. Workflow trigged Event- ${{ github.event_name  }}. The fully qualified reference (ref) that triggered the workflow run- ${{ github.ref }}"
+            run: echo "The current checked out branch is $GITHUB_REF. Workflow trigged Event- ${{ github.event_name  }}. The fully qualified reference (ref) branch that triggered the workflow run- ${{ github.ref }}"
           - name: "Install Python"
             uses: actions/setup-python@v4
             with:
