--- a/.github/workflows/ci-teradata-main-systemtest-dashboard.yml
+++ b/.github/workflows/ci-teradata-main-systemtest-dashboard.yml
@@ -43,8 +43,8 @@ jobs:
         with:
           ref: main
           persist-credentials: false
-      - name: "Display current branch"
-        run: echo "The current branch is ${{ github.ref }}"
+      - name: "Github Event and Branch Details"
+        run: echo "The current checked out branch is $GITHUB_REF. Workflow trigged Event- ${{ github.event_name  }}. The fully qualified reference (ref) branch that triggered the workflow run- ${{ github.ref }}"          
       - name: "Install Python"
         uses: actions/setup-python@v4
         with:
