--- a/.github/workflows/ci-teradata-main-systemtest-dashboard.yml
+++ b/.github/workflows/ci-teradata-main-systemtest-dashboard.yml
@@ -111,6 +111,8 @@ jobs:
       - name: "Generate Teradata Airflow Provider System Tests Report"
         if: always()
         run:  |
+              pwd
+              ls
               ls report_test.xml
               ls reporttest.csv
               cat reporttest.csv
